# fabricatefs

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  release.yml
src/: main.cpp
